Use isBlank() for the name guards, per review preference